[package]
name = "basic-http-server"
version = "0.8.1"
authors = ["Brian Anderson <andersrb@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A simple static HTTP file server, for learning and local development"
homepage = "https://github.com/brson/basic-http-server"
repository = "https://github.com/brson/basic-http-server"
readme = "README.md"
edition = "2018"

[dependencies]
bytes = "1.2.1"
clap = { version = "4.0.0", features = ["derive"] }
comrak = "0.18"
derive_more = "0.99.17"
env_logger = "0.10"
handlebars = "4.3.5"
http = "0.2.8"
hyper = { version = "0.14", features = ["stream", "server", "tcp", "http1"] }
log = "0.4.8"
mime = "0.3.14"
mime_guess = "2.0.1"
percent-encoding = "2.1.0"
serde = { version = "1.0.102", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.24"
tokio-util = { version = "0.7.4", features = ["codec"] }
