[package]
name = "basic-http-server"
version = "0.8.1"
authors = ["Brian Anderson <andersrb@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A simple static HTTP file server, for learning and local development"
homepage = "https://github.com/brson/basic-http-server"
repository = "https://github.com/brson/basic-http-server"
readme = "README.md"
edition = "2021"

[dependencies]
bytes = "1.2.1"
clap = { version = "4.0.0", features = ["derive"] }
comrak = "0.26"
derive_more = { version = "1.0.0-beta.6", features = ["display", "from"] }
env_logger = "0.11"
futures = "0.3.24"
handlebars = "5"
http = "1.1.0"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
log = "0.4.8"
mime = "0.3.14"
mime_guess = "2.0.1"
percent-encoding = "2.1.0"
serde = { version = "1.0.102", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }

[profile.release]
lto = "fat"
strip = true
